Migrated to local database.

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_API_URL="https://tagumseminar2022.000webhostapp.com"
+VUE_APP_API_URL="http://localhost:8080/ionic-seminar-backend"
 # must start with VUE_APP_NEW_VARIABLE
