--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "axios": "^1.2.0",
+    "chart.js": "^4.1.1",
     "core-js": "^3.6.5",
     "datatables.net": "^1.13.1",
     "datatables.net-dt": "^1.13.1",
@@ -26,6 +27,7 @@
     "ionicons": "^6.0.3",
     "mst-auto-page": "^1.1.9",
     "vue": "^3.2.21",
+    "vue-chartjs": "^5.0.1",
     "vue-router": "^4.0.12",
     "vue3-easy-data-table": "^1.5.23",
     "vuex": "^4.0.2"
